--- a/Code/projeto_final_kobe.ipynb
+++ b/Code/projeto_final_kobe.ipynb
@@ -13,7 +13,6 @@
    },
    "source": [
     "# Sistema Avaliação de Lances - Kobe\n",
-    "\n",
     "![image.png](attachment:9996dec9-acb2-47ab-80ca-22da1cd7c5e6.png)\n",
     "\n",
     "- Implementar um pipeline de processamento de dados com o mlflow, rodada (run) com o nome \"PreparacaoDados\":\n",
@@ -21,7 +20,7 @@
     "- Registrar o modelo de classificação e o disponibilize através do MLFlow através de API. Selecione agora os dados da base de dados original onde shot_type for igual à 3PT Field Goal (será uma nova base de dados) e através da biblioteca requests, aplique o modelo treinado. Publique uma tabela com os resultados obtidos e indique o novo log loss e f1_score.\n",
     "- Implemente em um arquivo .py anexo, um dashboard de monitoramento da operação usando Streamlit.\n",
     "\n",
-    "Todos os arquivos desse projeto estão disponíveis no github para clone a partir de: https://github.com/LEBAIMS/modelo_kobe.git\n"
+    "Todos os arquivos desse projeto estão disponíveis no github para clone a partir de: https://github.com/LEBAIMS/modelo_kobe.git"
    ]
   },
   {
@@ -35,16 +34,13 @@
    "metadata": {},
    "source": [
     "# Diagrama \n",
-    "\n",
     "![image.png](attachment:b0f23008-d1cd-4c7f-ba9b-fb3d7341a7af.png)\n",
     "\n",
     "Em nosso projeto, faremos uso das etapas circundadas com a cor verde\n",
     "\n",
     "- Aquisição de dados: Não faremos uso da etapa pois os dados já foram coletados e estão disponíveis para uso imediato.\n",
     "- Criação dos modelos: Após as etapas de Preparação de Dados, Treinamento de Modelos, Avaliação e Testagem, podemos registrar um Modelo para modos Staging ou Produção.\n",
-    "- Operação do modelo: Operar o modelo significam fazer uso das etapas Deploymenty e Monitoramento\n",
-    "\n",
-    "Apontar os artefatos que serão criados ao longo de um projeto. Para cada artefato, indique qual seu objetivo."
+    "- Operação do modelo: Operar o modelo significam fazer uso das etapas Deploymenty e Monitoramento"
    ]
   },
   {
@@ -570,7 +566,9 @@
    "id": "b4b06011-d200-4ab9-861e-8648c606b2c6",
    "metadata": {},
    "source": [
-    "# Operação Sistema de Classificação de Jogadas"
+    "# Operação Sistema de Classificação de Jogadas\n",
+    "\n",
+    "Uma vez que o modelo esteja registrado no MlFlow, o mesmo poderá ser \"servido\" atráves de API REST, disponível no próprio MlFlow e atráves dessa API, enviar dados pelo método POST para amostra e realizar uma predicção baseada no modelo, conforme demonstrado no código abaixo, usando a base dados \"data_novelty\" como amostra."
    ]
   },
   {
@@ -761,7 +759,29 @@
    "id": "48676dea-7b89-4f4d-b858-18e2114cc58d",
    "metadata": {},
    "source": [
-    "# Revalidacao de Amostras para Monitoramento"
+    "# Monitoramento de Modelos\n",
+    "\n",
+    "Os modelos, por mais \"tunning\" que possam ser realizados na sua construção, tendem, com o passar do tempo, sofrerem um degração, pois os dados analisados tendem a sofrer mudanças por vários motivos, como mudanças de paradigmas, eventos temporais, mudança de conveitos ou de costumes, tecnológicos e vários outros.\n",
+    "\n",
+    "Por esses motivos, é necessário manter um monitoramento periódico para avaliar a permanência da eficiência do modelo. A periodicidade dessa reavaliação depende de cada caso, podendo até ser em real-time e a sua execução pode ser realizada também de diversas formas, sendo a automatizada a mais indicada, gerando alertas quando essa degradação for identificada, podendo inclusive dar o início a um processo de retreinamento também de forma automática.\n",
+    "\n",
+    "A degração de um modelo por ser classificada em tipo, que seriam instantâneo (alguma mudança drástica e inesperada, ou mesmo algum bug), gradual, que pode ser identificada na evolução da degradação em cada monitoramento, recorrente, que conta com eventos temporais recorrentes, como carnaval, natal e etc. e temporário, que são de curto espaço de tempo, imprevisíveis e de curta duração.\n",
+    "\n",
+    "O monitoramento de um modelo pode contar com a variável alvo em sua nova amostra, o que torna o processo mais fácil, pois bastaria avaliar uma ou mais métricas e caso essas sejam degradadas em mais de uma tolerência pré-determinada, o alarme é disparado. Porém, quando a variável alvo não está disponível é necessário fazer uso de outras técnicas, como monitorar a distribuição das variáveis de entradas e saídas, em quesitos como média, desvios padrões e divergências. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b980033b-14fd-428e-9c8b-216eda066f17",
+   "metadata": {},
+   "source": [
+    "# Retreinamento\n",
+    "\n",
+    "Como comentado acima, o disparo de um alerta pode dar início a um processo de retreinamento, porém, esse também pode ocorrer mesmo que alertas não sejam disparados, dependendo da estratágia de retreinamento do modelo, que podem ser:\n",
+    "\n",
+    "* Preventivo: Essa é a estratégia que não depende de disparos de alertas, pois ela pode ser programada para ocorrer sempre dentro de uma determinada frequencia ou então, quando um quantidade pré-definida de novas informações estiverem dispníveis\n",
+    "* Reativo: Essa estratégia depende do resultado de um monitoramento, seja esse resolvido identificado por um alerta ou não. Uma vez que o monitoramento identifique uma degradação acima de determinada tolerância, o retreiamento é iniciado\n",
+    "* Preditivo: Mesmo antes do resultado de um monitoramento, apenas pelo fato de se identificar algum fato novo que vá impactar no resultado de um modelo, como por exemplo a existência de uma pandemia, é possível já se antecipar e retreinar um modelo sem ter que aguardar o resultado de um monitoramento reativo ou a ocorrência de um monitoramento programado no preventivo."
    ]
   },
   {
